- made changes in Gradle